[package]
name = "gitlab-client-rs"
version = "0.1.0"
authors = ["Philippe Gaultier <philippe.gaultier@ppro.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.3", features = ["json"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3.14"
