[package]
name = "gitlab-client-rs"
version = "0.1.0"
authors = ["Philippe Gaultier"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.3", features = ["json"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3.14"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = { version = "1.0"}
crossterm = "0.18"
tui = { version = "0.14", default-features = false, features = ['crossterm'] }
